fix annot processor version. Fix java11 deprecations